2002-07-11  Derek Atkins  <derek@ihtfp.com>

	* change gncEntry->account into gncEntry->invAccount and
	  gncEntry->billAccount.  Change the register so that Bills use
	  the BillAccount and Invoices use the InvoiceAccount.  This
	  allows the same Entry to have both an "expense" and "income"
	  account to offset each other.

2002-07-10  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/druid-loan.[ch]: Added; Initial implementation of
	Gnome Druid for setting up loan-repayment Scheduled Transactions.
	
	* src/doc/loans.txt: Added; notes about how loans will be dealt
	with in GnuCash.
	
	* src/gnome/glade/sched-xact.glade: Added loan-druid.
	
	* src/gnome/window-main.c (gnc_main_window_create_menus): Added
	'Mortgage/Loan Repayment Setup' Druid invocation menu item.

	* src/scm/fin.scm: Added. Implementations of 'ipmt', 'ppmt', 'pmt'
	and supporting code.
	
	* src/app-utils/test/test-exp-parser.c (test_parser): Added tests
	for functions-in-expressions.  Added [passed] test for Conrad's
	bug.

	* src/app-utils/gnc-exp-parser.c (func_op): Added. gnc-side
	callback for dealing with a function in an expression.

	* src/calculation/expression_parser.c: Added initial, undocumented
	support for functions in expressions.

2002-07-10  Derek Atkins  <derek@ihtfp.com>

	* add Billable flag and Bill-To (owner) to line-item entries.
	* save these flags only if the entry is attached to a Bill.
	* add a Billable column to Bill register

	* add gncQueryAddBooleanMatch() convenience function

	* add a BillTo owner in the GncInvoice object.  Save it in XML if
	  it's non-empty.

	* modify the Entry Ledger query to pull in Billable Entries from
	  Posted Bills that belong to an Invoice's Owner.

	* business-prefs: add the bill_reg_width preference to save the value
	* implement "Default Project" in the Bill register to enter a
	  default Bill-to customer/job.  It's only visible on Bills, not
	  Invoices.
	
2002-07-09  Derek Atkins  <derek@ihftp.com>
